new r-selection test added

--- a/Aluminium data/27-02/27-02 TEST 2 - max with wl selection.ipynb
+++ b/Aluminium data/27-02/27-02 TEST 2 - max with wl selection.ipynb
@@ -2290,7 +2290,12 @@
    "source": [
     "#target = [251.59, 288.12, 390.60] #peaks for Si\n",
     "#target = [277.91, 279.59, 280.23, 281.78, 383.74, 285.27] #peaks for Mg\n",
-    "target = [292.83, 293.61, 294.91, 403.25, 404.63, 404.56] #peaks for Mn"
+    "#target = [292.83, 293.61, 294.91, 403.25, 404.63, 404.56] #peaks for Mn\n",
+    "#target= [296.06,324.73, 327.37] #peaks for Cu\n",
+    "#target= [330.14, 334.41] #peaks for Zn\n",
+    "#target= [310.03, 312.69, 404.63, 426.17, 373.69, 372.03, 373.43, 257.67, 259.36, 259.90, 274.89, 356.94, 363.04] #Fe\n",
+    "target = [251.59, 288.12, 390.60, 277.91, 279.59, 280.23, 281.78, 383.74, 285.27, 292.83, 293.61, 294.91, 403.25, 404.63, 404.56, 296.06,324.73, 327.37, 330.14, 334.41, 310.03, 312.69, 404.63, 426.17, 373.69, 372.03, 373.43, 257.67, 259.36, 259.90, 274.89, 356.94, 363.04]\n",
+    "len(target)"
    ]
   },
   {
@@ -5315,7 +5320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
