--- a/Aluminium data/27-02/27-02 TEST 5 - norm with wl selection.ipynb
+++ b/Aluminium data/27-02/27-02 TEST 5 - norm with wl selection.ipynb
@@ -1472,13 +1472,23 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "For Silicon (Si) the peaks are at **251.59, 288.12, 390.60**\n",
     "\n",
     "For Magnesium (Mg) the peaks are at **277.91, 279.59, 280.23, 281.78, 383.74, 285.27**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#target = [251.59, 288.12, 390.60] #peaks for Si\n",
+    "target = [277.91, 279.59, 280.23, 281.78, 383.74, 285.27] #peaks for Mg\n",
+    "#target = [292.83, 293.61, 294.91, 403.25, 404.63, 404.56] #peaks for Mn"
    ]
   },
   {
@@ -4904,7 +4914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
